# career-os

./: .fastapicloudignore  .gitignore  README.md  main.py  pyproject.toml
career_os_api/: _types.py  api.py  config.py  constants.py  middleware.py  responses.py  router.py  schemas.py
career_os_api/auth/: __init__.py  dependencies.py  jwt.py  risc.py  risc_handlers.py  router.py  schema.py
career_os_api/database/: connection.py  ddl.py  job_postings.py  pool.py  retry.py  risc_events.py  schemas.py  users.py
career_os_api/service/job_posting/: extractor.py  fetch.py  platform.py  saramin.py  schema.py  wanted.py
career_os_web/: .gitignore  DESIGN.md  README.md  biome.json  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vercel.json  vite.config.ts
career_os_web/src/: App.css  App.test.tsx  App.tsx  auth-flow.test.tsx  index.css  main.tsx
career_os_web/src/app/: providers.tsx  router.tsx  theme.ts
career_os_web/src/components/: app-layout.tsx  protected-route.tsx  route-error-boundary.tsx
career_os_web/src/components/ui/: alert.tsx  avatar.tsx  badge.tsx  button.test.tsx  button.tsx  card.tsx  input.tsx  label.tsx  separator.tsx  skeleton.tsx  tag-input.test.tsx  tag-input.tsx  textarea.tsx
career_os_web/src/data/: stack-packages.ts
career_os_web/src/pages/: add-job-posting-page.test.tsx  add-job-posting-page.tsx  auth-callback-page.tsx  home-page.tsx  job-posting-detail-page.test.tsx  job-posting-detail-page.tsx  job-posting-form-fields.tsx  job-posting-form-state.ts  job-postings-page.tsx  login-page.tsx  not-found-page.tsx  tooling-page.tsx
career_os_web/src/services/: api-base-url.ts  api-client.ts  api-error.ts  auth.ts  job-postings.ts  schemas.ts
career_os_web/src/store/: auth-store.ts  workspace-store.ts
career_os_web/src/test/: setup.ts  test-utils.tsx
career_os_web/src/types/: job-posting.ts
career_os_web/src/utils/: auth-redirect.ts  job-posting-formatters.ts  url.ts
career_os_web/tests/e2e/: app.spec.ts
tests/: README.md  conftest.py  httpx_stubs.py
tests/api/: test_main.py  test_router.py
tests/unit/auth/: test_callback_url.py  test_dependencies.py  test_jwt.py  test_risc.py  test_risc_handlers.py
tests/unit/database/: test_job_postings.py  test_retry.py  test_risc_events.py  test_users.py
tests/unit/service/job_posting/: test_extractor.py  test_fetch.py  test_platform.py  test_saramin.py  test_schema.py  test_wanted.py
