[project]
name = "career-os"
version = "0.1.0"
description = "CareerOS backend API service"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "authlib>=1.7.0",
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.136.1",
    "itsdangerous>=2.2.0",
    "openai>=2.32.0",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.14.0",
    "python-jose[cryptography]>=3.5.0",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "N",  # pep8-naming
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["career_os_api"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyrefly]
python-version = "3.14"
python-interpreter-path = ".venv/bin/python"
project-includes = ["career_os_api", "main.py"]
project-excludes = ["**/.[!/.]*", "**/tests", "**/__pycache__", "**/.venv/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = ["pytest>=9.0.3", "pytest-asyncio>=1.3.0", "pytest-cov>=7.1.0"]
